testsuite/tests/properties/invalid_dynvar/test.out
== bind_twice.lkt ==
bind_twice.lkt:6:9: error: this declaration conflicts with the dynamic variable binding my_var at bind_twice.lkt:5:9
6 |         bind my_var = 13;
  |         ^^^^^^^^^^^^^^^^


== call_bound.lkt ==
Code generation was successful

== call_unbound.lkt ==
call_unbound.lkt:4:36: error: In call to BaseNode.internal_get_int, my_var needs to be bound
4 |     fun get_int_impl(): Int = node.internal_get_int()
  |                                    ^^^^^^^^^^^^^^^^


== homonym_arg.lkt ==
homonym_arg.lkt:7:19: error: this declaration conflicts with the argument my_var at homonym_arg.lkt:8:26
7 |     @with_dynvars(my_var)
  |                   ^^^^^^


== use_bound.lkt ==
Code generation was successful

== use_unbound.lkt ==
use_unbound.lkt:4:31: error: my_var is not bound in this context: please use the 'bind' construct to bind is first.
4 |     fun get_int_impl(): Int = my_var
  |                               ^^^^^^


lkt_compile: Done
